--- a/docs/style.css
+++ b/docs/style.css
@@ -22,7 +22,6 @@ li a:hover {
   width:100%;
   text-align:center;
       background-color: rgba(66, 197, 190, 1);
-  
 }
 #header {
   text-align:center;
@@ -73,4 +72,7 @@ li a:hover {
   margin:25px 0px 25px 0px;
   background-color:rgba(66, 197, 190, 1);
   
+}
+#schedulebutton {
+  margin-left:45%;
 }
