--- a/docs/style.css
+++ b/docs/style.css
@@ -74,5 +74,20 @@ li a:hover {
   
 }
 #schedulebutton {
-  margin-left:45%;
+ border: white;
+  text-align:center;
+  font-size:40px;
+  width:220px;
+  
+ margin:auto;
+  background-color:#42C5BE
+  border-radius:5px;;
+  box-shadow:0px 0px 2px rgba(0,0,0,.5), 1px 1px 5px rgba(0,0,0,.3);
+  opacity:0.8;   
+  
+}
+#schedulebutton a {
+  text-decoration:none;
+  color:white;
+  background-color:#42C5BE;
 }
