--- a/docs/style.css
+++ b/docs/style.css
@@ -81,7 +81,7 @@ li a:hover {
   
  margin:auto;
   background-color:#42C5BE
-  border-radius:5px;;
+  border-radius:5px;
   box-shadow:0px 0px 2px rgba(0,0,0,.5), 1px 1px 5px rgba(0,0,0,.3);
   opacity:0.8;   
   
