--- a/docs/style.css
+++ b/docs/style.css
@@ -154,6 +154,7 @@ span:nth-child(1){color:black;transform: translate3d(0, 0, 30px);-webkit-transfo
 span:nth-child(2){color:black;background:white;transform: rotateX(90deg) translate3d(0, 0, 30px);-webkit-transform: rotateX(90deg) translate3d(0, 0, 30px);}
 .hoverbutton {
   margin-top:90px;
+  width:250px;
   margin-left:auto;
   margin-right:auto;
 }
